src-ken&y/objects/Contract_Line__c.object
<CustomObject>
    <customHelpPage>HelpPurchasingContract</customHelpPage>
    <description>The item purchased on the associated purchase agreement</description>
    <fields>
        <fullName>ASL_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This provides the user with the ability to override the ASL validation and state a reason for the same.</description>
        <label>ASL Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Facilities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this contract line can be purchased from any facility/location</description>
        <label>All Facilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <formula>IF( (Contract_Quantity__c - Purchased_Quantity__c) &gt; 0, Contract_Quantity__c - Purchased_Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPC_Code__c</fullName>
        <description>Control Process Code I think? Reason for overriding the AVL validation via the checkbox field</description>
        <inlineHelpText>If the ASL Override checkbox is selected, a CPC (controlled process change) number is required.</inlineHelpText>
        <label>CPC Code</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the Company that this contract line is against</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Purchase Agreement Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this line is consigned, inherited from Item Cross Ref record for corresponding Item-Facility-Supplier combo</description>
        <label>Consigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_End__c</fullName>
        <label>Purchase Agreement End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Quantity__c</fullName>
        <description>The quantity that is allowed to purchase under the contract</description>
        <label>Purchase Agreement Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Start__c</fullName>
        <label>Purchase Agreement Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <description>The total value of the items that can be purchased under the contract.</description>
        <label>Purchase Agreement Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Purchase Agreement</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Purchase Agreement Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Contract__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Details__c</fullName>
        <description>Details of the exception on this line.</description>
        <label>Exception Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates there is an exception on this line.</description>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Matching__c</fullName>
        <description>2 way -  matches SI quantity to PO quantity, 3 way -  matches SI quantity to RL quantities for PO</description>
        <label>Invoice Matching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Three Way</fullName>
                </value>
                <value>
                    <fullName>Two Way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ItemUOMKey__c</fullName>
        <description>This is used to identify lines for a specific item and Purchase UOM combination</description>
        <formula>Item__c+&apos;/&apos;+Purchase_UOM__c</formula>
        <inlineHelpText>This is used to identify lines for a specific item and Purchase UOM combination</inlineHelpText>
        <label>ItemUOMKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Cross_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Cross Reference</label>
        <referenceTo>Item_Cross_Reference__c</referenceTo>
        <relationshipLabel>Purchase Agreement Lines</relationshipLabel>
        <relationshipName>Purchase_Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item that this contract line is negotiated against.</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Purchase Agreement Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <description>Line number on the contract line</description>
        <label>Line</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Purchase Agreement Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_Order_Quantity__c</fullName>
        <label>Minimum Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negotiated_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Negotiated price reflects additional costs, such as shipping.</inlineHelpText>
        <label>Negotiated Price</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Agreement_Line_Value__c</fullName>
        <formula>Contract_Quantity__c *  Negotiated_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Agreement Line Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Purchase Unit of Measure</inlineHelpText>
        <label>Purchase UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Purchase Agreement Lines</relationshipLabel>
        <relationshipName>Purchase_Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchasedValue__c</fullName>
        <formula>Purchased_Quantity__c *  Negotiated_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchased Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchased_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity for the selected line.</inlineHelpText>
        <label>Purchased Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity received so far</description>
        <inlineHelpText>Quantity received so far.</inlineHelpText>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Returned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Returned</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Still_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Still Due</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <description>Gives you the remaining quantity available for this contract line</description>
        <formula>IF ( (Contract_Quantity__c - (Quantity_Received__c - Quantity_Returned__c + Quantity_Still_Due__c )) &gt; 0, 
Contract_Quantity__c - (Quantity_Received__c - Quantity_Returned__c + Quantity_Still_Due__c ),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remaining quantity = Contract Quantity - Purchased Quantity.</inlineHelpText>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Value_Percent__c</fullName>
        <formula>IF(Purchase_Agreement_Line_Value__c &gt; 0,Remaining_Value__c /  Purchase_Agreement_Line_Value__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Value (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remaining_Value__c</fullName>
        <formula>Remaining_Quantity__c *  Negotiated_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remaining value = Contract Value - Purchased Value. The system prompts you if you attempt to purchase more than remains on the contract.</inlineHelpText>
        <label>Remaining Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current status of the contract item</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_10_Max__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tier 10 Max</description>
        <label>Tier 10 Max</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_10_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tier 10 Price</description>
        <label>Tier 10 Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Max__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tier 1 Max</description>
        <label>Tier 1 Max</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tier 1 Price</description>
        <inlineHelpText>The price for an item if the tier specifications are met.</inlineHelpText>
        <label>Tier 1 Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Max__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tier 2 Max</description>
        <label>Tier 2 Max</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tier 2 Price</description>
        <label>Tier 2 Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates whether this contract line has a fixed tier meaning only 1 tier or tiered type which means multiple tiers defined based on dollar or quantity. If type is set to standard, then use the negotiated price and quantity field on the contract line else if type is set to Tiered then use the price from the matching tier</description>
        <inlineHelpText>Indicates whether this contract line has a fixed price or a tiered price. If type is set to &quot;Standard&quot;, then the negotiated price and quantity are used. If the type is set to &quot;Tiered&quot; the price from the matching tier is used.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Tiered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <formula>Item__r.Purchasing_UOM__r.Name</formula>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueReceived__c</fullName>
        <formula>Quantity_Received__c * Negotiated_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Received</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Purchase Agreement Line</label>
    <nameField>
        <label>Purchase Agreement Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Agreement Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Agreement_Qty_less_than_Purchased_Qty</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Contract_Quantity__c) &amp;&amp; Contract_Quantity__c &lt;  Purchased_Quantity__c</errorConditionFormula>
        <errorDisplayField>Contract_Quantity__c</errorDisplayField>
        <errorMessage>Cannot reduce the Purchase Agreement Quantity below the Purchased Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_update_invoice_matching</fullName>
        <active>true</active>
        <description>Validation rule to prevent changing the invoice matching on an approved agreement line</description>
        <errorConditionFormula>AND( ISCHANGED( Invoice_Matching__c ) , 
Approved__c )</errorConditionFormula>
        <errorMessage>Cannot update invoice matching field on an approved purchase agreement line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Line_End_date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND
     ((ISNEW() || ISCHANGED(  Contract_Start__c  ) || 
      ISCHANGED( Contract_End__c ) ),  
      Contract_End__c  &lt;  Contract_Start__c )</errorConditionFormula>
        <errorMessage>Contract line End date should not be less than Contract line Start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ForceOverrideCPCCode</fullName>
        <active>true</active>
        <description>If the ASL Override is enabled, force the user to enter a CPC code</description>
        <errorConditionFormula>ASL_Override__c == true &amp;&amp;  OR( ISBLANK( CPC_Code__c ) ,ISNULL( CPC_Code__c ) )</errorConditionFormula>
        <errorDisplayField>CPC_Code__c</errorDisplayField>
        <errorMessage>CPC code is required if ASL Override is enabled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Item_is_required</fullName>
        <active>true</active>
        <description>Item is required</description>
        <errorConditionFormula>Item__c == &apos;&apos;</errorConditionFormula>
        <errorMessage>Item is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MOQ_cannot_be_negative</fullName>
        <active>true</active>
        <description>Minimum Order Quantity cannot be negative</description>
        <errorConditionFormula>Minimum_Order_Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Minimum_Order_Quantity__c</errorDisplayField>
        <errorMessage>Minimum Order Quantity cannot be a negative number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negotiated_Price_cannot_be_negative</fullName>
        <active>true</active>
        <description>Negotiated Price cannot be negative</description>
        <errorConditionFormula>Negotiated_Price__c  &lt; 0</errorConditionFormula>
        <errorMessage>Negotiated Price cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tier10MaxNeedsToBeMoreThanTier9Max</fullName>
        <active>true</active>
        <description>If Tier 9 Max exists, Tier 10 Max  needs to be greater than Tier 9 max and / or It should be less than or equal to Purchase Agreement Quantity.</description>
        <errorConditionFormula>IF ( 
AND(ISNEW() || ISCHANGED( Tier_10_Max__c ), 
OR( 
(Tier_10_Max__c &gt; Contract_Quantity__c), 
AND(Tier_9_Max__c &lt;&gt; 0,Tier_10_Max__c &lt;&gt; 0 ,Tier_10_Max__c &lt;= Tier_9_Max__c), 
AND(Tier_9_Max__c =0,Tier_10_Max__c &lt;&gt; 0)  
)) 
,true,false)</errorConditionFormula>
        <errorDisplayField>Tier_10_Max__c</errorDisplayField>
        <errorMessage>Tier 10 Max should be less than or equal to Purchase Agreement Quantity and / or 
Tier 10 Max should be greater than Tier 9 Max.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tier1MaxNeedsToBeLessThanMaxQty</fullName>
        <active>true</active>
        <description>Tier 1 Max needs to be less than or equal to Max Qty</description>
        <errorConditionFormula>IF ( 
AND( ISNEW() || ISCHANGED( Tier_1_Max__c ), 
OR( 
(Tier_1_Max__c &gt; Contract_Quantity__c), 
AND(Tier_2_Max__c &lt;&gt; 0,IF(AND(Tier_1_Max__c &lt;&gt; 0,Tier_1_Max__c &gt;= Tier_2_Max__c),TRUE,IF(OR(Tier_1_Max__c=0,ISNULL(Tier_1_Max__c)),TRUE,FALSE)) 
))) 
,true,false)</errorConditionFormula>
        <errorDisplayField>Tier_1_Max__c</errorDisplayField>
        <errorMessage>Tier 1 Max should be less than or equal to Purchase Agreement Quantity and / or 
Tier 1 Max should be less than Tier 2 Max.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tier2MaxNeedsToBeMoreThanTier1Max</fullName>
        <active>true</active>
        <description>If Tier 1 Max has a value, Tier 2 Max needs to be greater than  Tier 1 Max. 
If not Tier 2 Max should be less than or equal to Purchase Agreement Quantity</description>
        <errorConditionFormula>IF ( 
AND( ISNEW() || ISCHANGED( Tier_2_Max__c ), 
OR( 
(Tier_2_Max__c &gt; Contract_Quantity__c), 
AND(Tier_1_Max__c &lt;&gt; 0,Tier_2_Max__c &lt;&gt; 0 ,Tier_2_Max__c &lt;= Tier_1_Max__c), 
AND(Tier_1_Max__c =0,Tier_2_Max__c &lt;&gt; 0), 
AND(Tier_3_Max__c &lt;&gt; 0,IF(AND(Tier_2_Max__c &lt;&gt; 0,Tier_2_Max__c &gt;= Tier_3_Max__c),TRUE,IF(OR(Tier_2_Max__c=0,ISNULL(Tier_2_Max__c)),TRUE,FALSE)) 
))) 
,true,false)</errorConditionFormula>
        <errorDisplayField>Tier_2_Max__c</errorDisplayField>
        <errorMessage>Tier 2 Max should be less than or equal to Purchase Agreement Quantity and 
Tier 2 Max should be greater than Tier 1 Max  and / or
Tier 2 Max should be less than Tier 3 Max.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tier3MaxNeedsToBeMoreThanTier2Max</fullName>
        <active>true</active>
        <description>If Tier 2 Max exists, Tier 3 Max needs to be greater than Tier 2. If not it should be less than  or equal to Purchase Agreement Quantity.</description>
        <errorConditionFormula>IF (
AND(ISNEW() || ISCHANGED( Tier_3_Max__c), 
OR(
(Tier_3_Max__c &gt; Contract_Quantity__c),
AND(Tier_2_Max__c &lt;&gt; 0,Tier_3_Max__c &lt;&gt; 0 ,Tier_3_Max__c &lt;= Tier_2_Max__c),
AND(Tier_2_Max__c =0,Tier_3_Max__c &lt;&gt; 0),
AND(Tier_4_Max__c &lt;&gt; 0,IF(AND(Tier_3_Max__c &lt;&gt; 0,Tier_3_Max__c &gt;= Tier_4_Max__c),TRUE,IF(OR(Tier_3_Max__c=0,ISNULL(Tier_3_Max__c)),TRUE,FALSE))
)))
,true,false)</errorConditionFormula>
        <errorDisplayField>Tier_3_Max__c</errorDisplayField>
        <errorMessage>Tier 3 Max should be less than or equal to Purchase Agreement Quantity and
Tier 3 Max should be greater than Tier 2 Max and / or
Tier 3 Max should be less than Tier 4 Max.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tier4MaxNeedsToBeMoreThanTier3Max</fullName>
        <active>true</active>
        <description>If Tier 3 Max exists, Tier 4 Max needs to be greater than or equal to Tier 3 Max. If not less than Purchase Agreement Quantity.</description>
        <errorConditionFormula>IF ( 
AND(ISNEW() || ISCHANGED( Tier_4_Max__c ), 
OR( 
(Tier_4_Max__c &gt; Contract_Quantity__c), 
AND(Tier_3_Max__c &lt;&gt; 0,Tier_4_Max__c &lt;&gt; 0 ,Tier_4_Max__c &lt;= Tier_3_Max__c), 
AND(Tier_3_Max__c =0,Tier_4_Max__c &lt;&gt; 0), 
AND(Tier_5_Max__c &lt;&gt; 0,IF(AND(Tier_4_Max__c &lt;&gt; 0,Tier_4_Max__c &gt;= Tier_5_Max__c),TRUE,IF(OR(Tier_4_Max__c=0,ISNULL(Tier_4_Max__c)),TRUE,FALSE)) 
))) 
,true,false)</errorConditionFormula>
        <errorDisplayField>Tier_4_Max__c</errorDisplayField>
        <errorMessage>Tier 4 Max should be less than or equal to Purchase Agreement Quantity and
Tier 4 Max should be greater than Tier 3 Max and / or
Tier 4 Max should be less than Tier 5 Max .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tier5MaxNeedsToBeMoreThanTier4Max</fullName>
        <active>true</active>
        <description>If Tier 4 Max exists, Tier 5  Max needs to be greater than or equal to Tier 4 Max. If not less than Purchase Agreement Quantity.</description>
        <errorConditionFormula>IF ( 
AND(ISNEW() || ISCHANGED( Tier_5_Max__c ), 
OR( 
(Tier_5_Max__c &gt; Contract_Quantity__c), 
AND(Tier_4_Max__c &lt;&gt; 0,Tier_5_Max__c &lt;&gt; 0 ,Tier_5_Max__c &lt;= Tier_4_Max__c), 
AND(Tier_4_Max__c =0,Tier_5_Max__c &lt;&gt; 0), 
AND(Tier_6_Max__c &lt;&gt; 0,IF(AND(Tier_5_Max__c &lt;&gt; 0,Tier_5_Max__c &gt;= Tier_6_Max__c),TRUE,IF(OR(Tier_5_Max__c=0,ISNULL(Tier_5_Max__c)),TRUE,FALSE)) 
))) 
,true,false)</errorConditionFormula>
        <errorDisplayField>Tier_5_Max__c</errorDisplayField>
        <errorMessage>Tier 5 Max quantity should be less than or equal to Purchase Agreement Quantity and
Tier 5 Max quantity should be greater than Tier 4 Max and / or
Tier 5 Max quantity should be less than Tier 6 Max .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tier6MaxNeedsToBeMoreThanTier5Max</fullName>
        <active>true</active>
        <description>If Tier 5 max exists, Tier 6 Max needs to be greater than Tier 5 Max. If not it should be less than Purchase Agreement Quantity.</description>
        <errorConditionFormula>IF ( 
AND(ISNEW() || ISCHANGED( Tier_6_Max__c ), 
OR( 
(Tier_6_Max__c &gt; Contract_Quantity__c), 
AND(Tier_5_Max__c &lt;&gt; 0,Tier_6_Max__c &lt;&gt; 0 ,Tier_6_Max__c &lt;= Tier_5_Max__c), 
AND(Tier_5_Max__c =0,Tier_6_Max__c &lt;&gt; 0), 
AND(Tier_7_Max__c &lt;&gt; 0,IF(AND(Tier_6_Max__c &lt;&gt; 0,Tier_6_Max__c &gt;= Tier_7_Max__c),TRUE,IF(OR(Tier_6_Max__c=0,ISNULL(Tier_6_Max__c)),TRUE,FALSE)) 
))) 
,true,false)</errorConditionFormula>
        <errorDisplayField>Tier_6_Max__c</errorDisplayField>
        <errorMessage>Tier 6 Max should be less than or equal to Purchase Agreement Quantity and
Tier 6 Max should be greater than Tier 5 Max  and / or
Tier 6 Max should be less than Tier 7 Max .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tier7MaxNeedsToBeMoreThanTier6Max</fullName>
        <active>true</active>
        <description>If Tier 6 Max exists, Tier 7 Max needs to be greater than Tier 6 Max. If not it should be less than or equal to the Purchase Agreement Quantity.</description>
        <errorConditionFormula>IF ( 
AND(ISNEW() || ISCHANGED( Tier_7_Max__c ), 
OR( 
(Tier_7_Max__c &gt; Contract_Quantity__c), 
AND(Tier_6_Max__c &lt;&gt; 0,Tier_7_Max__c &lt;&gt; 0 ,Tier_7_Max__c &lt;= Tier_6_Max__c), 
AND(Tier_6_Max__c =0,Tier_7_Max__c &lt;&gt; 0), 
AND(Tier_8_Max__c &lt;&gt; 0,IF(AND(Tier_7_Max__c &lt;&gt; 0,Tier_7_Max__c &gt;= Tier_8_Max__c),TRUE,IF(OR(Tier_7_Max__c=0,ISNULL(Tier_7_Max__c)),TRUE,FALSE)) 
))) 
,true,false)</errorConditionFormula>
        <errorDisplayField>Tier_7_Max__c</errorDisplayField>
        <errorMessage>Tier 7 Max should be less than or equal to Purchase Agreement Quantity and
Tier 7 Max should be greater than Tier 6 Max and / or
Tier 7 Max should be less than Tier 8 Max.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tier8MaxNeedsToBeMoreThanTier7Max</fullName>
        <active>true</active>
        <description>If Tier 7 Max exists, Tier 8 Max needs to be greater than  Tier 7 Max. If not it should be less than or equal to Purchase Agreement Quantity.</description>
        <errorConditionFormula>IF ( 
AND(ISNEW() || ISCHANGED( Tier_8_Max__c ), 
OR( 
(Tier_8_Max__c &gt; Contract_Quantity__c), 
AND(Tier_7_Max__c &lt;&gt; 0,Tier_8_Max__c &lt;&gt; 0 ,Tier_8_Max__c &lt;= Tier_7_Max__c), 
AND(Tier_7_Max__c =0,Tier_8_Max__c &lt;&gt; 0), 
AND(Tier_9_Max__c &lt;&gt; 0,IF(AND(Tier_8_Max__c &lt;&gt; 0,Tier_8_Max__c &gt;= Tier_9_Max__c),TRUE,IF(OR(Tier_8_Max__c=0,ISNULL(Tier_8_Max__c)),TRUE,FALSE)) 
))) 
,true,false)</errorConditionFormula>
        <errorDisplayField>Tier_8_Max__c</errorDisplayField>
        <errorMessage>Tier 8 Max should be less than or equal to Purchase Agreement Quantity and
Tier 8 Max should be greater than Tier 7 Max and / or
Tier 8 Max should be less than Tier 9 Max .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tier9MaxNeedsToBeMoreThanTier8Max</fullName>
        <active>true</active>
        <description>If Tier 8 Max exists, Tier 9 Max  needs to be greater than Tier 8 Max. If not it should be less than Purchase Agreement Quantity.</description>
        <errorConditionFormula>IF ( 
AND(ISNEW() || ISCHANGED( Tier_9_Max__c ), 
OR( 
(Tier_9_Max__c &gt; Contract_Quantity__c), 
AND(Tier_8_Max__c &lt;&gt; 0,Tier_9_Max__c &lt;&gt; 0 ,Tier_9_Max__c &lt;= Tier_8_Max__c), 
AND(Tier_8_Max__c =0,Tier_9_Max__c &lt;&gt; 0), 
AND(Tier_10_Max__c &lt;&gt; 0,IF(AND(Tier_9_Max__c &lt;&gt; 0,Tier_9_Max__c &gt;= Tier_10_Max__c),TRUE,IF(OR(Tier_9_Max__c=0,ISNULL(Tier_9_Max__c)),TRUE,FALSE)) 
))) 
,true,false)</errorConditionFormula>
        <errorDisplayField>Tier_9_Max__c</errorDisplayField>
        <errorMessage>Tier 9 Max should be less than or equal to Purchase Agreement Quantity and 
Tier 9 Max should be greater than Tier 8 Max and / or 
Tier 9 Max should be less than Tier 10 Max .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_From_Date_validation</fullName>
        <active>true</active>
        <description>Validates that the valid from date on this contract line is not before the contract header valid from date</description>
        <errorConditionFormula>ISCHANGED(Contract_Start__c) &amp;&amp; Contract_Start__c &lt;   Contract__r.Contract_Start__c || 
ISCHANGED(Contract_End__c) &amp;&amp; Contract_End__c   &gt;  Contract__r.Contract_End__c</errorConditionFormula>
        <errorMessage>Date range needs to fall within the date range on the Purchase Agreement.</errorMessage>
    </validationRules>
</CustomObject>